--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'java'
-    id 'org.jetbrains.intellij' version '0.4.16'
+    id "java"
+    id "org.jetbrains.intellij" version "1.17.3"
 }
 
-group 'dev.pnbarx.idea'
-version '1.2.0'
+group "dev.pnbarx.idea"
+version "1.3.1"
 
-sourceCompatibility = 1.8
+sourceCompatibility = 17
 
 repositories {
     mavenCentral()
@@ -14,11 +14,12 @@ repositories {
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    type 'IU'
-    version 'LATEST-EAP-SNAPSHOT'
-    downloadSources true
-    updateSinceUntilBuild true
+    version = "2022.3.3"
+    type = "IU"
+    downloadSources = true
+    updateSinceUntilBuild = true
     patchPluginXml {
-        sinceBuild "183.2635.13"
+        sinceBuild = "223"
+        untilBuild = "241.*"
     }
 }
