--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -75,6 +75,26 @@
     <change-notes><![CDATA[
         <ul>
             <li>
+                1.3.1
+                <ul>
+                    <li type="disc">
+                        Fixed deprecated SDK elements usage
+                    </li>
+                    <li type="disc">
+                        minor code refactoring
+                    </li>
+                    <li type="disc">
+                        deprecated IDEs older than 2022.3.3
+                    </li>
+                </ul>
+            </li>
+            <li>
+                1.2.2 Support for 2021.1.* and above
+            </li>
+            <li>
+                1.2.1 Support for 2021.1
+            </li>
+            <li>
                 1.2.0
                 <ul>
                     <li type="disc">
@@ -122,7 +142,7 @@
     ]]></change-notes>
 
     <depends>com.intellij.modules.platform</depends>
-    <idea-version since-build="183.2635.13"/>
+    <idea-version since-build="223.8836.41"/>
     <incompatible-with>com.intellij.modules.rider</incompatible-with>
 
     <extensions defaultExtensionNs="com.intellij">
@@ -136,8 +156,8 @@
                class="dev.pnbarx.idea.treecolor.actions.HighlightActionGroup"
                text="Highlight" description="Highlight your project files and folders"
                icon="/icons/highlight.png" popup="true">
-            <add-to-group group-id="ProjectViewPopupMenu" anchor="before" relative-to-action="AddToFavorites"/>
-            <add-to-group group-id="EditorTabPopupMenuEx" anchor="before" relative-to-action="AddToFavorites"/>
+            <add-to-group group-id="ProjectViewPopupMenu" anchor="before" relative-to-action="ReformatCode"/>
+            <add-to-group group-id="EditorTabPopupMenuEx" anchor="before" relative-to-action="RenameFile"/>
         </group>
     </actions>
 
